ahora si cambie el titulo de la practica
Me falló al inicio

--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Bienvenido a mi primera practica</title>
+        <title>Bienvenido a mi practica</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
